fix icon aligning in ie11

--- a/packages/components/src/Typeahead/Typeahead.scss
+++ b/packages/components/src/Typeahead/Typeahead.scss
@@ -95,6 +95,7 @@ $tc-typeahead-items-font-size: 1.5rem !default;
 			position: absolute;
 			margin: 0;
 			right: 0;
+			bottom: 0.6rem;
 
 			> svg {
 				height: 0.8rem;
